# Lidbridge

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  V2_IMPLEMENTATION_RECORD.md  package-lock.json  package.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/ISSUE_TEMPLATE/.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  rust.yml
.github/workflows/.github/.github/: pull_request_template.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: github_app.rs  history_store.rs  lib.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/cleaner/: mod.rs
src-tauri/src/db/: central.rs  mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/secret/: decrypt.rs  encrypted.rs  integrity.rs  keys.rs  mod.rs
src/app/: page.tsx
src/app/components/: dashboard-ui.tsx
